src/test/deca/context/invalid/created/decl_class/double_classe.deca
// Description :
//    classe A déclarée deux fois
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10 :(1.3) La classe est déjà définie

class A{
}
class A{
}